--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+== VERSION 4.0.0
+
+ * Minimal PHP version : 8.4
+ * Add rector
+ * Rector fixes
+ * Dependencies update
+
 == VERSION 2.0.3
 
  * Add sf5 dependency support
